[package]
name = "Win-process-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Com", "Win32_System_Wmi", "Win32_System_Variant", "Win32_Security", "Win32_System_SystemServices", "Win32_System_SystemInformation", "Win32_System_WindowsProgramming", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }
